--- a/traffic.ipynb
+++ b/traffic.ipynb
@@ -294,6 +294,435 @@
    "source": [
     "## Análisis estadístico"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paquetes cargados: 62\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scapy.all import rdpcap\n",
+    "\n",
+    "# Cargar archivo .pcap\n",
+    "paquetes = rdpcap(\"analisis_paquetes.pcap\")\n",
+    "\n",
+    "# Verificamos cuántos paquetes hay\n",
+    "print(f\"Paquetes cargados: {len(paquetes)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "datos = []\n",
+    "\n",
+    "for pkt in paquetes:\n",
+    "    if pkt.haslayer(\"IP\"):\n",
+    "        ip_layer = pkt[\"IP\"]\n",
+    "        src_ip = ip_layer.src\n",
+    "        dst_ip = ip_layer.dst\n",
+    "        \n",
+    "        src_port = pkt.sport if hasattr(pkt, \"sport\") else None\n",
+    "        dst_port = pkt.dport if hasattr(pkt, \"dport\") else None\n",
+    "        \n",
+    "        datos.append({\n",
+    "            \"Src Address\": src_ip,\n",
+    "            \"Dst Address\": dst_ip,\n",
+    "            \"Src Port\": src_port,\n",
+    "            \"Dst Port\": dst_port\n",
+    "        })\n",
+    "\n",
+    "# Crear DataFrame\n",
+    "df = pd.DataFrame(datos)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Src Address</th>\n",
+       "      <th>Dst Address</th>\n",
+       "      <th>Src Port</th>\n",
+       "      <th>Dst Port</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Src Address  Dst Address  Src Port  Dst Port\n",
+       "0   10.1.10.53  84.54.22.33        53        53\n",
+       "1  84.54.22.33   10.1.10.53        53        53\n",
+       "2   10.1.10.53  84.54.22.33        53        53\n",
+       "3  84.54.22.33   10.1.10.53        53        53\n",
+       "4   10.1.10.53  84.54.22.33        53        53"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Src Address</th>\n",
+       "      <th>Dst Address</th>\n",
+       "      <th>Src Port</th>\n",
+       "      <th>Dst Port</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>84.54.22.33</td>\n",
+       "      <td>10.1.10.53</td>\n",
+       "      <td>53</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>62 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Src Address  Dst Address  Src Port  Dst Port\n",
+       "0    10.1.10.53  84.54.22.33        53        53\n",
+       "1   84.54.22.33   10.1.10.53        53        53\n",
+       "2    10.1.10.53  84.54.22.33        53        53\n",
+       "3   84.54.22.33   10.1.10.53        53        53\n",
+       "4    10.1.10.53  84.54.22.33        53        53\n",
+       "..          ...          ...       ...       ...\n",
+       "57  84.54.22.33   10.1.10.53        53        53\n",
+       "58   10.1.10.53  84.54.22.33        53        53\n",
+       "59  84.54.22.33   10.1.10.53        53        53\n",
+       "60   10.1.10.53  84.54.22.33        53        53\n",
+       "61  84.54.22.33   10.1.10.53        53        53\n",
+       "\n",
+       "[62 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"Src Address\", \"Dst Address\", \"Src Port\", \"Dst Port\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IP de origen únicas:\n",
+      "['10.1.10.53' '84.54.22.33' '75.75.75.75']\n"
+     ]
+    }
+   ],
+   "source": [
+    "origenes = df[\"Src Address\"].unique()\n",
+    "print(\"IP de origen únicas:\")\n",
+    "print(origenes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IP de destino únicas:\n",
+      "['84.54.22.33' '10.1.10.53' '75.75.75.75']\n"
+     ]
+    }
+   ],
+   "source": [
+    "destinos = df[\"Dst Address\"].unique()\n",
+    "print(\"IP de destino únicas:\")\n",
+    "print(destinos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IP origen más frecuente: 10.1.10.53\n"
+     ]
+    }
+   ],
+   "source": [
+    "ip_origen_frecuente = df[\"Src Address\"].value_counts().idxmax()\n",
+    "print(f\"IP origen más frecuente: {ip_origen_frecuente}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IP destino más frecuente desde 10.1.10.53: 84.54.22.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "comunicaciones_frecuentes = df[df[\"Src Address\"] == ip_origen_frecuente]\n",
+    "ip_destino_frecuente = comunicaciones_frecuentes[\"Dst Address\"].value_counts().idxmax()\n",
+    "print(f\"IP destino más frecuente desde {ip_origen_frecuente}: {ip_destino_frecuente}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Puerto destino más común: 53\n"
+     ]
+    }
+   ],
+   "source": [
+    "puerto_destino = comunicaciones_frecuentes[\"Dst Port\"].value_counts().idxmax()\n",
+    "print(f\"Puerto destino más común: {puerto_destino}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Propósito del puerto 53: domain\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scapy.layers.inet import TCP, UDP\n",
+    "\n",
+    "# Buscar descripción del puerto\n",
+    "import socket\n",
+    "try:\n",
+    "    servicio = socket.getservbyport(int(puerto_destino))\n",
+    "except:\n",
+    "    servicio = \"No encontrado\"\n",
+    "    \n",
+    "print(f\"Propósito del puerto {puerto_destino}: {servicio}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Puertos de origen más usados:\n",
+      "Src Port\n",
+      "53       29\n",
+      "15812     1\n",
+      "23903     1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "puertos_origen = comunicaciones_frecuentes[\"Src Port\"].value_counts()\n",
+    "print(\"Puertos de origen más usados:\")\n",
+    "print(puertos_origen)\n"
+   ]
   }
  ],
  "metadata": {
